--- a/intro-neural-networks/student-admissions/StudentAdmissions.ipynb
+++ b/intro-neural-networks/student-admissions/StudentAdmissions.ipynb
@@ -21,9 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Importing pandas and numpy\n",
@@ -49,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Importing matplotlib\n",
@@ -84,9 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Separating the ranks\n",
@@ -125,16 +119,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO:  Make dummy variables for rank\n",
-    "one_hot_data = pass\n",
+    "\n",
+    "one_hot_data = pd.get_dummies(data, columns=['rank'])\n",
     "\n",
     "# TODO: Drop the previous rank column\n",
-    "one_hot_data = pass\n",
+    "# one_hot_data = one_hot_data.drop(axis=1, columns=['rank'])\n",
     "\n",
     "# Print the first 10 rows of our data\n",
     "one_hot_data[:10]"
@@ -151,15 +144,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Making a copy of our data\n",
     "processed_data = one_hot_data[:]\n",
     "\n",
     "# TODO: Scale the columns\n",
+    "processed_data['gre'] = processed_data['gre'] / 800.\n",
+    "processed_data['gpa'] = processed_data['gpa'] / 4.\n",
     "\n",
     "# Printing the first 10 rows of our procesed data\n",
     "processed_data[:10]"
@@ -182,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample = np.random.choice(processed_data.index, size=int(len(processed_data)*0.9), replace=False)\n",
@@ -207,9 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "features = train_data.drop('admit', axis=1)\n",
@@ -264,15 +253,13 @@
    "source": [
     "# TODO: Write the error term formula\n",
     "def error_term_formula(x, y, output):\n",
-    "    pass"
+    "    return (y-output)*sigmoid_prime(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Neural Network hyperparameters\n",
@@ -341,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate accuracy on test data\n",
@@ -352,11 +337,20 @@
     "accuracy = np.mean(predictions == targets_test)\n",
     "print(\"Prediction accuracy: {:.3f}\".format(accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
