Code working for project 1

--- a/project-bikesharing/Your_first_neural_network.ipynb
+++ b/project-bikesharing/Your_first_neural_network.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -40,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_path = 'Bike-Sharing-Dataset/hour.csv'\n",
@@ -53,9 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rides.head()"
@@ -75,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rides[:24*10].plot(x='dteday', y='cnt')"
@@ -94,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dummy_fields = ['season', 'weathersit', 'mnth', 'hr', 'weekday']\n",
@@ -123,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "quant_features = ['casual', 'registered', 'cnt', 'temp', 'hum', 'windspeed']\n",
@@ -149,9 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save data for approximately the last 21 days \n",
@@ -176,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Hold out the last 60 days or so of the remaining data as a validation set\n",
@@ -213,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#############\n",
@@ -228,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def MSE(y, Y):\n",
@@ -249,9 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import unittest\n",
@@ -293,7 +271,9 @@
     "        network.weights_input_to_hidden = test_w_i_h.copy()\n",
     "        network.weights_hidden_to_output = test_w_h_o.copy()\n",
     "        \n",
+    "        print(network.weights_hidden_to_output)\n",
     "        network.train(inputs, targets)\n",
+    "        print(network.weights_hidden_to_output)\n",
     "        self.assertTrue(np.allclose(network.weights_hidden_to_output, \n",
     "                                    np.array([[ 0.37275328], \n",
     "                                              [-0.03172939]])))\n",
@@ -339,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -352,6 +330,21 @@
     "\n",
     "from my_answers import iterations, learning_rate, hidden_nodes, output_nodes\n",
     "\n",
+    "def lr_sweep(i, max_i):\n",
+    "    max_lr = 0.5\n",
+    "    mid_lr = 0.1\n",
+    "    min_lr = 0.02\n",
+    "    \n",
+    "    # slope = (min_lr-max_lr) / max_i\n",
+    "    \n",
+    "    # return slope * i + min_lr\n",
+    "    \n",
+    "    if i < max_i * 1. / 3.:\n",
+    "        return max_lr\n",
+    "    if i < max_i * 2. / 3.:\n",
+    "        return mid_lr\n",
+    "    else:\n",
+    "        return min_lr\n",
     "\n",
     "N_i = train_features.shape[1]\n",
     "network = NeuralNetwork(N_i, hidden_nodes, output_nodes, learning_rate)\n",
@@ -361,7 +354,8 @@
     "    # Go through a random batch of 128 records from the training data set\n",
     "    batch = np.random.choice(train_features.index, size=128)\n",
     "    X, y = train_features.ix[batch].values, train_targets.ix[batch]['cnt']\n",
-    "                             \n",
+    "    \n",
+    "    network.lr = lr_sweep(ii, iterations)\n",
     "    network.train(X, y)\n",
     "    \n",
     "    # Printing out the training progress\n",
@@ -379,15 +373,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"weights_input_to_hidden\")\n",
+    "print(network.weights_input_to_hidden)\n",
+    "print(\"weights_hidden_to_output\")\n",
+    "print(network.weights_hidden_to_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(losses['train'], label='Training loss')\n",
     "plt.plot(losses['validation'], label='Validation loss')\n",
     "plt.legend()\n",
-    "_ = plt.ylim()"
+    "plt.xlim(0)\n",
+    "_ = plt.ylim(0,2)"
    ]
   },
   {
@@ -402,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(8,4))\n",
@@ -434,6 +437,13 @@
     "\n",
     "#### Your answer below"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -453,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
