Exercises for NN

--- a/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
+++ b/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
@@ -75,8 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -103,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(-0.0148, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a feed-forward network\n",
     "model = nn.Sequential(nn.Linear(784, 128),\n",
@@ -115,7 +125,7 @@
     "                      nn.Linear(64, 10))\n",
     "\n",
     "# Define the loss\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "# Get our data\n",
     "images, labels = next(iter(trainloader))\n",
@@ -141,15 +151,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3058, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build a feed-forward network\n",
-    "model = \n",
+    "model = nn.Sequential(nn.Linear(784, 128),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(128, 64),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(64, 10),\n",
+    "                      nn.LogSoftmax(dim=1))\n",
+    "\n",
     "\n",
     "# TODO: Define the loss\n",
-    "criterion = \n",
+    "criterion = nn.NLLLoss()\n",
+    "\n",
     "\n",
     "### Run this to check your work\n",
     "# Get our data\n",
@@ -189,9 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.1803, -0.4312],\n",
+      "        [-0.4102, -1.3942]], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(2,2, requires_grad=True)\n",
     "print(x)"
@@ -199,9 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.0325, 0.1860],\n",
+      "        [0.1683, 1.9437]], grad_fn=<PowBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "y = x**2\n",
     "print(y)"
@@ -216,9 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PowBackward0 object at 0x11a15a470>\n"
+     ]
+    }
+   ],
    "source": [
     "## grad_fn shows the function that generated this variable\n",
     "print(y.grad_fn)"
@@ -233,9 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.5826, grad_fn=<MeanBackward1>)\n"
+     ]
+    }
+   ],
    "source": [
     "z = y.mean()\n",
     "print(z)"
@@ -250,9 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.grad)"
    ]
@@ -270,9 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.0902, -0.2156],\n",
+      "        [-0.2051, -0.6971]])\n",
+      "tensor([[ 0.0902, -0.2156],\n",
+      "        [-0.2051, -0.6971]], grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z.backward()\n",
     "print(x.grad)\n",
@@ -297,8 +375,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Build a feed-forward network\n",
@@ -319,9 +399,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before backward pass: \n",
+      " None\n",
+      "After backward pass: \n",
+      " tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+      "        [-0.0023, -0.0023, -0.0023,  ..., -0.0023, -0.0023, -0.0023],\n",
+      "        [-0.0009, -0.0009, -0.0009,  ..., -0.0009, -0.0009, -0.0009],\n",
+      "        ...,\n",
+      "        [-0.0007, -0.0007, -0.0007,  ..., -0.0007, -0.0007, -0.0007],\n",
+      "        [ 0.0005,  0.0005,  0.0005,  ...,  0.0005,  0.0005,  0.0005],\n",
+      "        [ 0.0002,  0.0002,  0.0002,  ...,  0.0002,  0.0002,  0.0002]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Before backward pass: \\n', model[0].weight.grad)\n",
     "\n",
@@ -341,8 +438,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from torch import optim\n",
@@ -367,9 +466,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial weights -  Parameter containing:\n",
+      "tensor([[-0.0262,  0.0054, -0.0336,  ..., -0.0118,  0.0116,  0.0044],\n",
+      "        [ 0.0094,  0.0350,  0.0162,  ..., -0.0005, -0.0011,  0.0284],\n",
+      "        [ 0.0103,  0.0074, -0.0200,  ..., -0.0313, -0.0105,  0.0319],\n",
+      "        ...,\n",
+      "        [ 0.0068,  0.0093,  0.0235,  ..., -0.0223,  0.0138,  0.0128],\n",
+      "        [-0.0158, -0.0329,  0.0071,  ...,  0.0031,  0.0033, -0.0284],\n",
+      "        [ 0.0205,  0.0220, -0.0242,  ...,  0.0279,  0.0290, -0.0020]],\n",
+      "       requires_grad=True)\n",
+      "Gradient - tensor([[-0.0009, -0.0009, -0.0009,  ..., -0.0009, -0.0009, -0.0009],\n",
+      "        [-0.0018, -0.0018, -0.0018,  ..., -0.0018, -0.0018, -0.0018],\n",
+      "        [ 0.0014,  0.0014,  0.0014,  ...,  0.0014,  0.0014,  0.0014],\n",
+      "        ...,\n",
+      "        [-0.0005, -0.0005, -0.0005,  ..., -0.0005, -0.0005, -0.0005],\n",
+      "        [ 0.0011,  0.0011,  0.0011,  ...,  0.0011,  0.0011,  0.0011],\n",
+      "        [ 0.0001,  0.0001,  0.0001,  ...,  0.0001,  0.0001,  0.0001]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Initial weights - ', model[0].weight)\n",
     "\n",
@@ -388,9 +510,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated weights -  Parameter containing:\n",
+      "tensor([[-0.0262,  0.0054, -0.0336,  ..., -0.0118,  0.0116,  0.0044],\n",
+      "        [ 0.0094,  0.0350,  0.0162,  ..., -0.0005, -0.0011,  0.0284],\n",
+      "        [ 0.0103,  0.0074, -0.0200,  ..., -0.0313, -0.0105,  0.0319],\n",
+      "        ...,\n",
+      "        [ 0.0068,  0.0093,  0.0235,  ..., -0.0223,  0.0138,  0.0128],\n",
+      "        [-0.0158, -0.0329,  0.0071,  ...,  0.0031,  0.0033, -0.0284],\n",
+      "        [ 0.0205,  0.0220, -0.0242,  ...,  0.0279,  0.0290, -0.0020]],\n",
+      "       requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Take an update step and few the new weights\n",
     "optimizer.step()\n",
@@ -410,9 +548,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 1.9511204956691148\n",
+      "Training loss: 0.8818789538798302\n",
+      "Training loss: 0.5374173736616746\n",
+      "Training loss: 0.4362733980009297\n",
+      "Training loss: 0.388874759552067\n"
+     ]
+    }
+   ],
    "source": [
     "## Your solution here\n",
     "\n",
@@ -433,9 +583,12 @@
     "        # Flatten MNIST images into a 784 long vector\n",
     "        images = images.view(images.shape[0], -1)\n",
     "    \n",
-    "        # TODO: Training pass\n",
+    "        optimizer.zero_grad()\n",
     "        \n",
-    "        loss = \n",
+    "        output = model(images)\n",
+    "        loss = criterion(output, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "        \n",
     "        running_loss += loss.item()\n",
     "    else:\n",
@@ -451,9 +604,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAagAAADjCAYAAADQWoDbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4xLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvDW2N/gAAFoNJREFUeJzt3XucVlW9x/HPlwFBBC8J9lIExwsY\nXvI2hyOZngwrRBOPWYFRpyt5K02tNOtoaiePmUdLLSlveQ9Lw1vqSQ0rUQHNuIgHCQVRARUQDQT8\nnT+ezTnjuDfMwMPea4bv+/Wal8+stdezfzPgfFlrr9lbEYGZmVlqOlVdgJmZWR4HlJmZJckBZWZm\nSXJAmZlZkhxQZmaWJAeUmZklyQFlZhucpLMlXV91HetC0jWSzlvHsWv8uiVNlfShlsdK6idpqaSG\ndSq6g3BAmVldSDpG0sTsB+uLku6R9MGKaglJb2S1vCDpohR/2EfE7hHxUE778xHRIyJWAUh6SNKX\nSy+wYg4oM1tvkk4BLgb+A3gv0A+4HBheYVl7RUQPYAhwDPCVlgdI6lx6VdZqDigzWy+StgDOAU6I\niN9GxBsRsSIi7oiIbxaMGSvpJUmLJY2XtHuzvmGSpkl6PZv9nJa195J0p6RFkl6V9LCktf4Mi4in\ngYeBPbL3mS3p25KeAt6Q1FnSwGyWsihbdjuixdv0knR/VtMfJe3QrN5LJM2RtETSJEkHthjbTdIt\n2djJkvZqNna2pENyvj+N2Syws6QfAAcCl2YzwkslXSbpxy3G3CHp5LV9P9oTB5SZra/BQDfgtjaM\nuQfoD2wDTAZuaNZ3JfDViOhJLVQeyNpPBeYCvanN0r4DrPVebZJ2o/YD/olmzSOBw4AtAQF3APdl\n9XwNuEHSrs2O/wxwLtALeLJFvY8DewPvAW4Exkrq1qx/ODC2Wf/tkrqsre7VIuJMagF7YrbsdyJw\nLTBydUBL6kVtpnhTa9+3PXBAmdn62hpYGBErWzsgIq6KiNcjYjlwNrBXNhMDWAHsJmnziHgtIiY3\na98W2CGboT0ca76Z6GRJr1ELn18CVzfr+0lEzImIfwD7Az2A8yPirYh4ALiTWoitdldEjM/qPRMY\nLKlv9rVcHxGvRMTKiPgx0BVoHm6TIuLWiFgBXEQtzPdv7fcqT0Q8BiymFkoAI4CHIuLl9Xnf1Dig\nzGx9vUJtCaxV13MkNUg6X9KzkpYAs7OuXtl/PwEMA57LltMGZ+0/AmYC90maJen0tZxq34jYKiJ2\njojvRsTbzfrmNHu9HTCnRf9zQJ+84yNiKfBqNg5Jp0qani1XLgK2aPa1tBz7NrVZ4HZrqb01rgVG\nZa9HAdfV4T2T4oAys/X1CLAMOLKVxx9DbdnrEGo/zBuzdgFExOMRMZzactvtwK+z9tcj4tSI2An4\nOHCKpCGsm+Yzr3lA3xbXs/oBLzT7vO/qF5J6UFuum5ddb/o28Clgq4jYktrMRgVjOwHbZ+dc13pX\nux4Ynl3TGkjte9WhOKDMbL1ExGLg34HLJB0pqbukLpIOlXRBzpCewHJqM6/u1Hb+ASBpE0mfkbRF\ntiS2BFi91fpwSbtIUrP2VXX4Eh4F3gC+ldX9IWoBeHOzY4ZJ+qCkTahdi3o0IuZkX8tKYAHQWdK/\nA5u3eP/9JB2VzTBPzr72CW2s8WVgp+YNETGX2vWv64DfZMuVHYoDyszWW0RcBJwCfJfaD+s5wInk\n/6v+V9SW0F4ApvHuH9afBWZny3/H8v/LWP2B/waWUpu1XZ73O0TrUPtbwBHAocBCatvjP5ft/lvt\nRuAsakt7+1HbNAFwL7UNH89kX9My3rl8CPA74NPAa9nXdlQWvm1xCXC0pNck/aRZ+7XAnnTA5T0A\n+YGFZmbtk6SDqC31Nba4htYheAZlZtYOZVvVTwJ+2RHDCRxQZmbtjqSBwCJq2+4vrricDcZLfGZm\nlqRS70P1kU6fdBpah3P/22O19qPMrK28xGdmZknynXzNEterV69obGysugyzupk0adLCiOi9tuMc\nUGaJa2xsZOLEiVWXYVY3kp5rzXFe4jMzsyQ5oMzMLEkOKDMzS5IDyszMkuSAMjOzJDmgzMwsSQ4o\nMzNLkgPKzMyS5IAyM7MkOaDMSibpJElTJE2VdHLV9ZilygFlViJJewBfAQYBewGHS+pfbVVmaXJA\nmZVrIDAhIt6MiJXAH4F/rbgmsyQ5oMzKNQU4SNLWkroDw4C+FddkliTfzdysRBExXdJ/AvcDS4G/\nAitbHidpNDAaoF+/fqXWaJYKz6DMShYRV0bEvhFxEPAq8D85x4yJiKaIaOrde62PzTHrkDyDMiuZ\npG0iYr6kfsBRwOCqazJLkQPKrHy/kbQ1sAI4ISJeq7ogsxQ5oMxKFhEHVl2DWXvga1BmZpYkB5SZ\nmSXJAWVmZklyQJmZWZK8SWIjs+zwQYV9fc5416/jAHBd4x8Kx3zy2Y/ltj8xdcfCMbvc8FZue6c/\nPVk4xsw2Pp5BmZlZkhxQZmaWJAeUWckkfSN7FtQUSTdJ6lZ1TWYpckCZlUhSH+DrQFNE7AE0ACOq\nrcosTQ4os/J1BjaV1BnoDsyruB6zJHkXXzvWqWfPwr5Fh++e237FDy8uHDOwS5fc9rfXUMMtO/8+\nv2Pn4jEPfiR/RevEx48pHNP/W6/ktq+cM7f4RAmKiBckXQg8D/wDuC8i7qu4LLMkeQZlViJJWwHD\ngR2B7YDNJI3KOW60pImSJi5YsKDsMs2S4IAyK9chwN8jYkFErAB+C3yg5UF+HpSZA8qsbM8D+0vq\nLknAEGB6xTWZJckBZVaiiHgUuBWYDPyN2v+DYyotyixR3iRhVrKIOAs4q+o6zFLnGZSZmSXJM6h2\noNP735fb/ux3NikcM/XAywp68reSr8mKWFXY972X989tP+Y9EwrHHLzpstz2qQddVThmwBnH5bbv\netL8wjGxIv+mtGbWPngGZWZmSXJAmZlZkhxQZmaWJAeUmZklyQFlZmZJ8i6+snVqyG1+5YvFj2K/\n8IwrctsP6LaiLiWtNmBc/k65njOL/5psNi//VrJ3DfznwjFnf/rm3PZP9FhYOOaZ4T/LbT/ynGGF\nY1a+9HJhn5mlzzMosxJJ2lXSk80+lkg6ueq6zFLkGZRZiSJiBrA3gKQG4AXgtkqLMkuUZ1Bm1RkC\nPBsRz1VdiFmKHFBm1RkB3FR1EWapckCZVUDSJsARwNiCfj+w0DZ6DiizahwKTI6I3K2GfmChmTdJ\nbBDab/fCvn1/+bfc9u9vc+mGKucddh//xeLObvk3hb30hOLHFQ3uWnwj2TK8sV+/wr6udyW9zXwk\nXt4zWyPPoMxKJqk78BFqj3s3swKeQZmVLCLeBLauug6z1HkGZWZmSXJAmZlZkhxQZmaWJF+DWg9F\nu/WOvfl3hWMO6764buc/a/4+hX3f3+aJ3PY1PVa9PXruMBX2DbirxELMrO48gzIzsyQ5oMzMLEkO\nKDMzS5IDyqxkkraUdKukpyVNlzS46prMUuRNEmbluwT4fUQcnd00tnvVBZmlyAFlViJJmwMHAZ8H\niIi3gLeqrMksVQ6otenUUNj1zEldc9vXZSv58Gc+Xtj3j/O3y22f/eni97tlyQfaXEOvyflbtrce\nN63N77Umrx42MLf94Qsua/N7Tf74xYV9I45v+/egBDsBC4CrJe0FTAJOiog3qi3LLD2+BmVWrs7A\nvsDPImIf4A3g9JYH+XlQZg4os7LNBeZGxKPZ57dSC6x38POgzBxQZqWKiJeAOZJ2zZqGAPVdQzXr\nIHwNyqx8XwNuyHbwzQK+UHE9ZklyQJmVLCKeBJqqrsMsdQ6ojLrm78ibcfmehWOeGXJFm89TtFtv\n1cHzCsdsQn7fgHvbfPp1Uu+HundeFnV7rx6d8v/czKz98zUoMzNLkgPKzMyS5IAyM7MkOaDMzCxJ\nDigzM0uSA8rMzJLkbeaZxZ/YJ7f9maFtv4HpyFkfK+xbcfZ7c9s7FWwltzUb9vSRhX2dmFNiJWZW\nbw4os5JJmg28Tu1XzFZGhH9p1yyHA8qsGgdHxMKqizBLma9BmZlZkhxQZuUL4D5JkySNrroYs1R5\nic+sfAdExDxJ2wD3S3o6IsY3PyALrtEA/fr1q6JGs8ptVAG14pD9CvvOO/cXbX6/Scvz2xf+cMfC\nMV3/+Hibz2PFZs7YtrBvQKK7+CJiXvbf+ZJuAwYB41scMwYYA9DU1FS/u+uatSNe4jMrkaTNJPVc\n/Rr4KDCl2qrM0rRRzaDMEvBe4DZJUPv/78aI+H21JZmlyQFlVqKImAXsVXUdZu2Bl/jMzCxJDigz\nM0uSA8rMzJLUIa9BderWLbd98+/NLRxzULe3ctsfW67CMd/5+rG57d3ufmwN1dmiXRqqLsHM2gHP\noMzMLEkOKDMzS5IDyszMkuSAMquApAZJT0i6s+pazFLlgDKrxknA9KqLMEtZx9zFt9WWue1jd7mr\nze816r78nXoAA+70br0iC0cPLuy74/gLCno2LRxz9ZK+ue0Df/pa4ZhVhT3VkrQ9cBjwA+CUissx\nS5ZnUGbluxj4FvB21YWYpcwBZVYiSYcD8yNi0lqOGy1poqSJCxYsKKk6s7Q4oMzKdQBwhKTZwM3A\nhyVd3/KgiBgTEU0R0dS7d++yazRLggPKrEQRcUZEbB8RjcAI4IGIGFVxWWZJckCZmVmSOuQuPrP2\nICIeAh6quAyzZHXIgJpxWmObx5y38P257e87+anCMRvLFqyim+8C6J735Lbfs8uFhWO26lS8nbzI\nrV/+aP75pz/Z5vcys/bBS3xmZpYkB5SZmSXJAWVmZklyQJmZWZIcUGZmlqQOuYtv6EFPtHnM0pVd\nc9vfXrZsfctJirrmf50Abxy2d277bZdcVDhmi05FO/yKd/4tjxW57YOuKL5vat+/PFLYZ2Ydk2dQ\nZmaWJAeUWYkkdZP0mKS/Spoq6ftV12SWqg65xGeWsOXAhyNiqaQuwJ8k3RMRE6ouzCw1DiizEkVE\nAEuzT7tkH1FdRWbp8hKfWckkNUh6EpgP3B8Rj1Zdk1mKHFBmJYuIVRGxN7A9MEjSHi2P8QMLzTro\nEt+lffL/QbpiDQspt/35n3Lb+5PuP247de9e2Pf6oXvmtm/3jZmFY+7Y8fKCnuIt4+ti2NSRue19\nz/1LXc+TuohYJOkhYCgwpUXfGGAMQFNTk5cAbaPkGZRZiST1lrRl9npT4BDg6WqrMktTh5xBmSVs\nW+BaSQ3U/oH464i4s+KazJLkgDIrUUQ8BexTdR1m7YGX+MzMLEkOKDMzS1KHXOJbFW1/GPumLzZs\ngErqo2Fg/9z2F4b2Lhwz8bSfbqhyWuX0l/J3RQL0PC5/U9rKDVWMmbVLnkGZmVmSHFBmZpYkB5SZ\nmSXJAWVmZklyQJmVSFJfSQ9Kmp49D+qkqmsyS1WH3MVnlrCVwKkRMVlST2CSpPsjYlrVhZmlxgGV\nufWrF+a2j1h2WuGYns+vavN5okG57VufMLtwzPF9xuW2D9n0zTaff10sjxWFfV9+blhu+9yL8rfG\nA2w2K90b8G5oEfEi8GL2+nVJ04E+gAPKrAUv8ZlVRFIjtdsebbyJbbYGDiizCkjqAfwGODkiluT0\n+3lQttFzQJmVTFIXauF0Q0T8Nu+YiBgTEU0R0dS7d/EdQ8w6MgeUWYkkCbgSmB4RF1Vdj1nKHFBm\n5ToA+CzwYUlPZh/5O03MNnIdchff+64/Ibd92qhLC8fs0qVrbnvVN10t09VL+ua2X3zDkYVj+p6X\n/5j2zXzdP1dE/AnI38ppZu/gGZSZmSXJAWVmZklyQJmZWZIcUGZmliQHlJmZJckBZWZmSeqQ28x3\nPvPx3Pbd4sTCMdM+W7wFvWrTV+TfrPWovxzb5vfqd03xH/mm017Mbe87N38ruZnZhuQZlJmZJckB\nZVYiSVdJmi9pStW1mKXOAWVWrmuAoVUXYdYeOKDMShQR44FXq67DrD1wQJmZWZI65C6+WLkyt33n\n7+bv7gM4/PYv5LY/87luhWOuH/rz3PZBXaNwzIrIf0z87uOKdxjucGf+++18d/HXsy7yv2tWBUmj\ngdEA/fr1q7gas2p4BmWWID+w0MwBZWZmiXJAmZVI0k3AI8CukuZK+lLVNZmlqkNegzJLVUSMrLoG\ns/bCMygzM0uSA8rMzJK0US3xFW0/B2DCU7nNAyYUDzmHfdezombn4bG6vZeZWUfgGZSZmSXJAWVm\nZknaqJb4zNqjv72wmMbT76q6DDMAZp9/WGnn8gzKzMyS5IAyK5mkoZJmSJop6fSq6zFLlQPKrESS\nGoDLgEOB3YCRknartiqzNDmgzMo1CJgZEbMi4i3gZmB4xTWZJckBZVauPsCcZp/PzdrMrAUHlFm5\nlNP2rgd+SRotaaKkiaveXFxCWWbpcUCZlWsu0LfZ59sD81oe1Px5UA3dtyitOLOUOKDMyvU40F/S\njpI2AUYA4yquySxJ/kVdsxJFxEpJJwL3Ag3AVRExteKyzJLkgDIrWUTcDdxddR1mqfMSn5mZJckB\nZWZmSfISn1ni9uyzBRNLvEGnWSo8gzIzsyQ5oMzMLEkOKDMzS5IDyszMkuSAMjOzJDmgzMwsSQ4o\nMzNLkn8PyixxkyZNWippRsVl9AIWugbXUKcadmjNQQ4os/TNiIimKguQNNE1uIayayg1oO5/e2ze\nw9rMzMzexdegzMwsSQ4os/SNqboAXMNqrqGmlBoUEWWcx8zMrE08gzIzsyQ5oMwSIGmopBmSZko6\nPae/q6Rbsv5HJTVWUMMpkqZJekrSHyS1aqtwPWtodtzRkkJS3XeStaYGSZ/KvhdTJd1Ydg2S+kl6\nUNIT2Z/HsA1Qw1WS5kuaUtAvST/JanxK0r71roGI8Ic//FHhB9AAPAvsBGwC/BXYrcUxxwM/z16P\nAG6poIaDge7Z6+OqqCE7ricwHpgANFXwfegPPAFslX2+TQU1jAGOy17vBszeAH8vDwL2BaYU9A8D\n7gEE7A88Wu8aPIMyq94gYGZEzIqIt4CbgeEtjhkOXJu9vhUYIqmev7ax1hoi4sGIeDP7dAKwfR3P\n36oaMucCFwDL6nz+1tbwFeCyiHgNICLmV1BDAJtnr7cA5tW5BiJiPPDqGg4ZDvwqaiYAW0ratp41\nOKDMqtcHmNPs87lZW+4xEbESWAxsXXINzX2J2r+e62mtNUjaB+gbEXfW+dytrgEYAAyQ9GdJEyQN\nraCGs4FRkuYCdwNfq3MNrdHWvzNt5jtJmFUvbybUcntta47Z0DXUDpRGAU3Av9Tx/GutQVIn4L+A\nz9f5vK2uIdOZ2jLfh6jNIh+WtEdELCqxhpHANRHxY0mDgeuyGt6uUw2tsaH/TnoGZZaAuUDfZp9v\nz7uXbP7vGEmdqS3rrGn5ZUPUgKRDgDOBIyJieR3P35oaegJ7AA9Jmk3tuse4Om+UaO2fxe8iYkVE\n/B2YQS2wyqzhS8CvASLiEaAbtfvjlalVf2fWhwPKrHqPA/0l7ShpE2qbIMa1OGYc8G/Z66OBByK7\nUl1WDdny2hXUwqne113WWkNELI6IXhHRGBGN1K6DHRERE8uqIXM7tQ0jSOpFbclvVsk1PA8MyWoY\nSC2gFtSxhtYYB3wu2823P7A4Il6s5wm8xGdWsYhYKelE4F5qO7iuioipks4BJkbEOOBKass4M6nN\nnEZUUMOPgB7A2Gx/xvMRcUTJNWxQrazhXuCjkqYBq4BvRsQrJddwKvALSd+gtqz2+Tr/gwVJN1Fb\nxuyVXes6C+iS1fhzate+hgEzgTeBL9Tz/OA7SZiZWaK8xGdmZklyQJmZWZIcUGZmliQHlJmZJckB\nZWZmSXJAmZlZkhxQZmaWJAeUmZklyQFlZmZJckCZmVmS/hd/3tP6ayEAjQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<Figure size 432x648 with 2 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import helper\n",
@@ -476,6 +640,15 @@
    "source": [
     "Now our network is brilliant. It can accurately predict the digits in our images. Next up you'll write the code for training a neural network on a more complex dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
