--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -60,8 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# First, import PyTorch\n",
@@ -70,8 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def activation(x):\n",
@@ -86,8 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Generate some data\n",
@@ -119,11 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors"
+    "## Calculate the output of this network using the weights and bias tensors\n",
+    "activation(torch.sum(features * weights) + bias)"
    ]
   },
   {
@@ -162,11 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "activation(torch.mm(features, weights.reshape(5, 1)) + bias)"
    ]
   },
   {
@@ -204,8 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Generate some data\n",
@@ -238,11 +270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3171]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "## Your solution here\n",
+    "\n",
+    "hidden = activation(torch.mm(features, W1.reshape(n_input, n_hidden)) + B1)\n",
+    "output = activation(torch.mm(hidden, W2.reshape(n_hidden, n_output)) + B2)\n",
+    "output"
    ]
   },
   {
@@ -265,9 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.86606418,  0.06640064,  0.80918892],\n",
+       "       [ 0.73268184,  0.04072971,  0.89447086],\n",
+       "       [ 0.98682994,  0.50162833,  0.67267355],\n",
+       "       [ 0.66399769,  0.64043593,  0.49144508]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.random.rand(4,3)\n",
@@ -276,9 +337,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8661, 0.0664, 0.8092],\n",
+       "        [0.7327, 0.0407, 0.8945],\n",
+       "        [0.9868, 0.5016, 0.6727],\n",
+       "        [0.6640, 0.6404, 0.4914]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = torch.from_numpy(a)\n",
     "b"
@@ -286,9 +361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.86606418,  0.06640064,  0.80918892],\n",
+       "       [ 0.73268184,  0.04072971,  0.89447086],\n",
+       "       [ 0.98682994,  0.50162833,  0.67267355],\n",
+       "       [ 0.66399769,  0.64043593,  0.49144508]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b.numpy()"
    ]
@@ -302,9 +391,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.7321, 0.1328, 1.6184],\n",
+       "        [1.4654, 0.0815, 1.7889],\n",
+       "        [1.9737, 1.0033, 1.3453],\n",
+       "        [1.3280, 1.2809, 0.9829]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiply PyTorch Tensor by 2, in place\n",
     "b.mul_(2)"
@@ -312,13 +415,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.73212836,  0.13280129,  1.61837784],\n",
+       "       [ 1.46536368,  0.08145943,  1.78894172],\n",
+       "       [ 1.97365987,  1.00325666,  1.3453471 ],\n",
+       "       [ 1.32799537,  1.28087186,  0.98289016]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Numpy array matches new values from Tensor\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
